--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Himachal Travel Blog</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <style>
         /* General Styles */
@@ -127,7 +127,7 @@
 
         #home {
             background: url("{{ url_for('static', filename='image1.avif') }}") no-repeat center center/cover;
-            color: rgb(10, 11, 11);
+            color: rgb(222, 231, 231);
             text-align: center;
             padding: 100px 20px;
         }
@@ -228,13 +228,10 @@
             <a href="#comments">Comments</a>
         </div>
     </nav>
-
-    <!-- Home Section -->
     <section id="home" class="section">
-        <h1>Welcome to Himachal Travel Blog</h1>
-        <p>Explore the beauty of Himachal Pradesh through our stories.</p>
-    </section>
-
+        <h1>Welcome to Himachal Pradesh</h1>
+        <p>Discover the beauty of Himachal Pradesh, a paradise for nature lovers.</p>
+        </section>
     <!-- Blog Section -->
     <section id="blog" class="section">
         <h1>Blog Posts</h1>
